--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,71 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+ 
+  
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  font-family: 'Nunito', sans-serif;
+ 
 }
+
+main {
+  padding: 1rem;
+  min-height: 100vh;
+  background: linear-gradient(to bottom, #cc0000 0%, #cc00cc 100%);
+}
+
+article {
+  font-size: 1.2rem;
+  width: 90%;
+  margin: 1rem;
+  
+}
+
+button {
+  
+  font: inherit;
+  font-size: 1rem;
+  
+  
+  padding: 0.5em 1.5em;
+  cursor: pointer;
+  border-radius: 0.5rem;
+  background-color: rgba(255, 255, 255, 0.5);
+  float: right;
+  margin-top: 10px;
+  margin-right: 10px;
+
+  
+}
+
+
+img {
+    width: 100px;
+    border: 0.5rem double #000;
+    border-radius: 50%;
+    margin: 0 1rem 1rem;
+
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+
+}
+
+h1 {
+  font-size: 36px;
+}
+
+
+
+
+
